fix color contrast problems

--- a/lesson3/css/lesson3.css
+++ b/lesson3/css/lesson3.css
@@ -41,7 +41,7 @@ h2 {
         display: block;
         font-size: 2em;
         font-weight: bold;
-        color: white;
+        color: black;
 }
 p{
     /* background-color: #77d8d8; */
@@ -51,7 +51,7 @@ p{
 
 }
 .myfooter {
-    color: white;
+    color: black;
     font-size: 1.5em;
 
 }
